--- a/projects/BMIcalculator/style.css
+++ b/projects/BMIcalculator/style.css
@@ -23,6 +23,13 @@
     margin-top: 20px;
     color: rgb(241, 241, 241);
   }
+
+  #message {
+    font-size: 35px;
+    margin-left: 90px;
+    margin-top: 20px;
+    color: rgb(241, 241, 241);
+  }
   
   button {
     width: 150px;
